--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.0",
   "main": "chatbot.js",
   "scripts": {
-    "start": "node chatbot.js"
+    "start": "node chatbot.js",
+    "dev": "nodemon chatbot.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.18.4",
-    "qrcode-terminal": "^0.12.0"
+    "dotenv": "^16.4.7",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.26.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
